--- a/signup-form.css
+++ b/signup-form.css
@@ -57,3 +57,15 @@ fieldset {
     display: flex;
     flex-direction: column;
 }
+input {
+    width: 100px;
+    height: 20px;
+    border-radius: 6px;
+  
+  }
+  button {
+    font-size: 20px;
+    width: 200px;
+    height:60px;
+    border-radius: 6px;
+  }
